# portfolio-mcp-server

./: .gitignore  LICENSE  README.md  claude_desktop_config_snippet.json  pyproject.toml  requirements-dev.txt  server.json  server.py
.github/workflows/: ci.yml
portfolio_mcp_server/: __init__.py  server.py
tests/: smoke_test.py  test_tools.py
