[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-mcp-server"
version = "1.0.0"
description = "MCP server exposing Ayush Tomar's AI project portfolio as queryable tools for Claude Desktop and other MCP clients"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ayush Tomar" }
]
keywords = ["mcp", "model-context-protocol", "portfolio", "ai-agents", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ayush-s-tomar/portfolio-mcp-server"
Repository = "https://github.com/ayush-s-tomar/portfolio-mcp-server"
Issues = "https://github.com/ayush-s-tomar/portfolio-mcp-server/issues"

[project.scripts]
portfolio-mcp-server = "portfolio_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_mcp_server"]
